--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Amass2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= favicon_link_tag 'favicon.ico' %>
     <%= stylesheet_link_tag controller_name, media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag controller_name, 'data-turbolinks-track': 'reload' %>
   </head>
