--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,2 +1,10 @@
 @import "bootstrap";
 @import "font-awesome";
+@import "metisMenu";
+@import "owl.carousel.min";
+@import "slicknav.min";
+@import "themify-icons";
+@import "default-css";
+@import "responsive";
+@import "typography";
+@import "styles";
