--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <%= favicon_link_tag 'favicon.ico' %>
     <%= stylesheet_link_tag controller_name, media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag controller_name, 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag controller_name, 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
