--- a/app/assets/stylesheets/themify-icons.scss
+++ b/app/assets/stylesheets/themify-icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'themify';
-	src:asset_url('/fonts/themify.eot?-fvbane');
-	src:asset_url('/fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'),
-		asset_url('/fonts/themify.woff?-fvbane') format('woff'),
-		asset_url('/fonts/themify.ttf?-fvbane') format('truetype'),
-		asset_url('/fonts/themify.svg?-fvbane#themify') format('svg');
+	src:font-url('themify.eot?-fvbane');
+	src:font-url('themify.eot?#iefix-fvbane') format('embedded-opentype'),
+		font-url('themify.woff?-fvbane') format('woff'),
+		font-url('themify.ttf?-fvbane') format('truetype'),
+		font-url('themify.svg?-fvbane#themify') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
