--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
   </head>
 
   <body>
-    <% if controller_name != 'sessions' %>
+    <% if test(controller_name) %>
       <%= render 'shared/left_panel' %>
     <% end %>
     <div class="main-content">
       <%= yield %>
-      <%= render 'shared/footer' %>
     </div>
+    <% if test(controller_name) %>
+      <%= render 'shared/footer' %>
+    <% end %>
   </body>
 </html>
