--- a/app/views/shared/_left_panel.html.erb
+++ b/app/views/shared/_left_panel.html.erb
@@ -12,7 +12,7 @@
 				<nav>
 					<ul class="metismenu" id="menu">
 						<li class="active">
-						<%= link_to home_index_path do%>
+						<%= link_to dashboard_index_path do%>
 							<i class="ti-dashboard"></i><span>dashboard</span>
 						<% end %>
 						</li>
